<resources>
    <string name="app_name">AppErrorsTracking</string>
    <string name="xposed_desc">Added more features to app\'s errors dialog, fixed custom rom deleted dialog, the best experience to Android developer.</string>
    <string name="empty_lable" translatable="false" />
    <string name="app_info">App Info</string>
    <string name="reopen_app">Reopen App</string>
    <string name="error_detail">Error Detail</string>
    <string name="mute_if_unlock">Mute until device unlocks</string>
    <string name="mute_if_restart">Mute until device restarts</string>
    <string name="close_app">Close App</string>
    <string name="aerr_title">%1$s has stopped</string>
    <string name="aerr_repeated_title">%1$s keeps stopping</string>
    <string name="mute_if_unlock_tip">Muted errors for \'%1$s\' until device is re-unlocked</string>
    <string name="mute_if_restart_tip">Muted errors for \'%1$s\' until device reboots</string>
    <string name="back">Back</string>
    <string name="copy_error_stack">Copy error stack</string>
    <string name="export_to_file">Export to file</string>
    <string name="error_info">Error Info</string>
    <string name="error_type">Error Type</string>
    <string name="error_file_name">File Name</string>
    <string name="error_throw_class">Throw Class</string>
    <string name="error_throw_method">Throw Method</string>
    <string name="error_line_number">Line Number</string>
    <string name="error_record_time">Record Time</string>
    <string name="copied">Copied</string>
    <string name="copy_fail">Copy failed</string>
    <string name="print_to_logcat">Print to logcat</string>
    <string name="print_to_logcat_success">Printed to logcat</string>
    <string name="output_stack_success">Export exception stack succeeded</string>
    <string name="output_stack_fail">Failed to export exception stack</string>
    <string name="export_all">Export all</string>
    <string name="clear_all">Clear all</string>
    <string name="errors_record">App Errors Record</string>
    <string name="no_list_data">No data for now</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="more">More</string>
    <string name="notice">Notice</string>
    <string name="are_you_sure_clear_errors">Are you sure you want to clear all errors records?</string>
    <string name="all_errors_clear_success">All errors records have been cleared</string>
    <string name="are_you_sure_export_all_errors">Are you sure you want to export all log files? The packaging process may take a while.</string>
    <string name="view_detail">View Detail</string>
    <string name="export_all_errors_success">All errors record exported</string>
    <string name="export_all_errors_fail">Failed to exported all errors record</string>
    <string name="no_cpu_abi">No ABI</string>
    <string name="remove_record">Remove Record</string>
    <string name="are_you_sure_remove_record">Are you sure you want to remove this record?</string>
    <string name="got_it">Got It</string>
    <string name="restart_system">Restart System</string>
    <string name="project_address">Project Address</string>
    <string name="module_not_activated">Module not activated</string>
    <string name="module_version">Module version: %1$s</string>
    <string name="system_version">System version: %1$s</string>
    <string name="module_is_activated">Module is activated</string>
    <string name="display_settings">Display Settings</string>
    <string name="hide_app_icon_on_launcher">Hide app icon on launcher</string>
    <string name="hide_app_icon_on_launcher_tip">After hiding the app icon, the interface may be closed and will no longer be displayed on the launcher. You can find and open the module settings in EdXposed or LSPosed.</string>
    <string name="hide_app_icon_on_launcher_notice">Note: Be sure to turn off the \"Force apps to show launcher icons\" feature in LSPosed</string>
    <string name="about_module">This Xposed Module is made by YukiHookAPI. \nLearn more https://github.com/fankes/YukiHookAPI</string>
    <string name="module_not_fully_activated">Module not fully activated</string>
    <string name="are_your_sure_restart_system">Are you sure you want to restart system?</string>
    <string name="fast_restart">Fast Restart</string>
    <string name="access_root_fail">Access Root failed</string>
    <string name="moment_ago">moment ago</string>
    <string name="second_ago">seconds ago</string>
    <string name="minute_ago">minutes ago</string>
    <string name="hour_ago">hours ago</string>
    <string name="day_ago">days ago</string>
    <string name="month_ago">months ago</string>
    <string name="year_ago">years ago</string>
    <string name="crash_process">Crashed Process \"%1$s\"</string>
    <string name="share_error_stack">Share error stack</string>
    <string name="preference_settings">Preference Settings</string>
    <string name="function_mgr">Function Management</string>
    <string name="only_show_errors_in_front">Show errors only foreground apps</string>
    <string name="only_show_errors_in_main_process">Show errors only main process apps</string>
    <string name="enable_apps_config_template">Enable apps config template</string>
    <string name="mgr_apps_config_template">Management Apps Config Template</string>
    <string name="view_errors_record">View Apps Errors Record</string>
    <string name="view_muted_errors_apps">View Muted Errors Apps</string>
    <string name="only_show_errors_in_front_tip">After enabling, the error information will only be displayed when the abnormal apps is in the foreground (in use). Although the abnormal background application will not showing the error information, they will be recorded in the errors history.</string>
    <string name="only_show_errors_in_main_process_tip">After enabling, the error information will only be displayed if the exception occurred in the application is in the main process (the first Application instance object).</string>
    <string name="apps_config_template_tip">Here you can individually configure whether to display an error dialog and other error tips when an exception occurs for each apps.\nAfter disabling, all apps will always display errors information in the form of error dialogs.</string>
    <string name="view_muted_errors_apps_tip">Here you can find apps that you have manually muted errors in different forms. This list will be automatically cleared after restarting. You can manage these ignored applications and remove them from the mute list.</string>
    <string name="muted_errors_apps">Muted Errors Apps</string>
    <string name="unmute">Unmute</string>
    <string name="unmute_all">Unmute All</string>
    <string name="are_you_sure_unmute_all">Are you sure you want to unmute all apps?</string>
    <string name="apps_config_template">Apps Config Template</string>
    <string name="filter_by_condition">Filter by Condition</string>
    <string name="no_list_result">No result to display</string>
    <string name="typo_app_name_pkg_name">Typo apps name or package name</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="result_count">%1$s results found</string>
    <string name="loading">Loading</string>
    <string name="when_errors_how_to_show_tip">You can configure how the system will show you errors when the apps crashes.</string>
    <string name="show_errors_dialog">Show errors dialog</string>
    <string name="show_errors_toast">Show errors Toast</string>
    <string name="show_nothing">Don\'t show anything</string>
    <string name="app_errors_statistics">App Errors Statistics</string>
    <string name="total_errors">Total errors</string>
    <string name="total_apps">Total apps</string>
    <string name="most_errors_app">The most errors app</string>
    <string name="most_errors_type">The most errors type</string>
    <string name="total_proportion_of_errors">Total proportion of errors</string>
    <string name="total_errors_unit">%1$s</string>
    <string name="total_apps_unit">%1$s (including system apps)</string>
    <string name="generating_statistics">Generating statistics</string>
    <string name="module_not_fully_activated_tip">The module is not fully activated and may not be able to load the current settings item. It is recommended to re -start the system and try it out.</string>
    <string name="show_errors_notify">Show errors notification</string>
    <string name="app_errors_tip">App collapses an unprocessed abnormality. Click to view details or feedback to the App developer.</string>
    <string name="batch_operations">Batch Operations</string>
    <string name="are_you_sure_apply_site_apps">Are you sure you want to apply settings to %1$s apps at once?</string>
    <string name="errors_dialog_always_show_reopen">Error dialog always shows \"Reopen App\"</string>
    <string name="errors_dialog_always_show_reopen_tip">After enabling, when using the dialog to display application exceptions, the \"Reopen App\" option will also be displayed when the errors is not the first time. If the current errors is not the main process or the application cannot be opened, this option will still not be displayed.</string>
    <string name="developer_notice_tip">This module is specially designed for Android developers.\n\nWhen it is possible that the computer cannot be connected and ADB cannot be performed, this module can be used to quickly capture any exception of any installed apps, so as to quickly locate the problem.\n\nThe error log of apps crashing is an invaluable asset for developers. If you are not a developer, you can still install this module to provide developers with more exception information to quickly solve problems.</string>
    <string name="developer_notice">Instructions</string>
    <string name="warning">Warning</string>
    <string name="fast_restart_problem">Some custom systems may experience errors after using fast restart.\n\nDo you want to continue?</string>
    <string name="view_errors_record_tip">Here you can find all apps exception records since the module started recording. The exception history will continue to be retained until you manually clear it or do a factory reset. You can view, export, share and clear the records.</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="enable_md3_app_errors_dialog">Enable Material 3 style errors dialog</string>
    <string name="enable_md3_app_errors_dialog_tip">This feature is enabled by default when the Android target version is 12 and above, and the theme dynamic colors function will only take effect on Android 12 and above.</string>
    <string name="user_id">User %1$s</string>
    <string name="unable_get_app_errors_record_tip">The errors record cannot be obtained now, you may need to check the errors history record later.\n\nIf the problem persists, it may be that your system has turned off the errors report collection function.</string>
    <string name="debug_logs">Debug Logs</string>
    <string name="refresh">Refresh</string>
    <string name="copy">Copy</string>
    <string name="export_all_logs_success">All debug logs exported</string>
    <string name="export_all_logs_fail">Failed to export all debug logs</string>
    <string name="this_contents_clear_when_restarts_tip">Here\'s content will be cleared after device restarts</string>
    <string name="when_logger_how_to_show_tip">You can configure the priority filter conditions for the current debug log display.</string>
    <string name="microsoft_app_center" translatable="false">Microsoft App Center</string>
    <string name="enable_anonymous_statistics">Enable anonymous statistics</string>
</resources>