<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="8.5dp"
        android:layout_marginBottom="10dp"
        android:lineSpacingExtra="6dp"
        android:text="@string/when_errors_how_to_show_tip"
        android:textSize="14sp" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/config_radio_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_errors_dialog"
            app:buttonTint="@color/colorPrimaryAccent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/config_radio_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_errors_toast"
            app:buttonTint="@color/colorPrimaryAccent" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/config_radio_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/show_nothing"
            app:buttonTint="@color/colorPrimaryAccent" />
    </RadioGroup>
</LinearLayout>