<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingTop="15dp"
    android:paddingRight="15dp"
    tools:ignore="ContentDescription,SmallSp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="8.5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/total_errors"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/total_errors_unit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/total_errors_unit"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="8.5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/total_apps"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/total_apps_unit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/total_apps_unit"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="8.5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/most_errors_app"
            android:textSize="14sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginEnd="5dp"
            app:cardBackgroundColor="@color/trans"
            app:cardCornerRadius="3.5dp"
            app:cardElevation="0dp">

            <ImageView
                android:id="@+id/most_errors_app_icon"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ic_android" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/most_errors_app_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="8.5dp"
        android:layout_marginBottom="15dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/most_errors_type"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/most_errors_type_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:background="@drawable/bg_red_round"
            android:ellipsize="end"
            android:paddingLeft="3dp"
            android:paddingTop="0.5dp"
            android:paddingRight="3dp"
            android:paddingBottom="0.5dp"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="10sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8.5dp"
        android:layout_marginRight="8.5dp"
        android:gravity="center|start">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/total_proportion_of_errors"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/total_ppt_of_errors_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:singleLine="true"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>