<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorThemeBackground"
    android:orientation="vertical"
    tools:context=".ui.activity.debug.LoggerActivity"
    tools:ignore="ContentDescription,UseCompoundDrawables">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="0dp"
        android:gravity="center|start"
        android:paddingLeft="15dp"
        android:paddingTop="13dp"
        android:paddingRight="15dp"
        android:paddingBottom="5dp">

        <androidx.constraintlayout.utils.widget.ImageFilterView
            android:id="@+id/title_back_icon"
            style="?android:attr/selectableItemBackgroundBorderless"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="20dp"
            android:src="@drawable/ic_back"
            android:tint="@color/colorTextGray"
            android:tooltipText="@string/back" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2.5dp"
            android:layout_weight="1"
            android:gravity="center|start"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:singleLine="true"
                android:text="@string/debug_log"
                android:textColor="@color/colorTextGray"
                android:textSize="19sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_count_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:singleLine="true"
                android:text="@string/this_contents_clear_when_restarts_tip"
                android:textColor="@color/colorTextDark"
                android:textSize="11.5sp"
                android:tooltipText="@string/this_contents_clear_when_restarts_tip" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:animateLayoutChanges="true"
            android:gravity="center|end"
            android:orientation="horizontal">

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/refresh_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginEnd="15dp"
                android:src="@drawable/ic_refresh"
                android:tint="@color/colorTextGray"
                android:tooltipText="@string/refresh" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/filter_icon"
                android:layout_width="22dp"
                android:layout_height="22dp"
                android:layout_marginEnd="12dp"
                android:src="@drawable/ic_filter"
                android:tint="@color/colorTextGray"
                android:tooltipText="@string/filter_by_condition" />

            <androidx.constraintlayout.utils.widget.ImageFilterView
                android:id="@+id/export_all_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/ic_export"
                android:tint="@color/colorTextGray"
                android:tooltipText="@string/export_all" />
        </LinearLayout>
    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/list_no_data_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:lineSpacingExtra="6dp"
            android:text="@string/no_list_data"
            android:textColor="@color/colorTextDark"
            android:textSize="17sp" />

        <ListView
            android:id="@+id/list_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@color/trans"
            android:dividerHeight="5dp"
            android:fadingEdgeLength="10dp"
            android:listSelector="@color/trans"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            android:requiresFadingEdge="vertical"
            android:scrollbars="none"
            android:visibility="gone" />
    </FrameLayout>
</LinearLayout>